<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlu_item"
        android:id="@+id/titluTxtItem"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nume_prof"
        android:id="@+id/numeProfItem"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grad_de_completare_proiect"
        android:id="@+id/gradCompletareItem"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editare"
        android:id="@+id/editareItem"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/clasificare"
    android:id="@+id/clasificareItem"/>



</LinearLayout>